[package]
name = "oxilight"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.25.1"
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["signal"]}
tokio-rustls = "0.26.4"
yaml_serde = "0.10.4"
